# KritaOnlineCollaboration

./: CMakeLists.txt  README.md  online_collab.desktop
python/: __init__.py  extension.py
src/: CMakeLists.txt  CollabNetwork.cpp  CollabNetwork.h  ImageChangeAnalyzer.cpp  ImageChangeAnalyzer.h  NetworkPacket.cpp  NetworkPacket.h  NodeState.cpp  NodeState.h  NodeUtils.cpp  NodeUtils.h  OnlineCollab.cpp  OnlineCollab.h  OnlineCollabDock.cpp  OnlineCollabDock.h  StreamUtils.cpp  StreamUtils.h  onlinecollab.json
